July21/singleregion-ntier/azuredeploy.json
{
    "$schema": "https://schema.management.azure.com/schemas/2019-04-01/deploymentTemplate.json#",
    "contentVersion": "1.0.0.0",
    "parameters": {
        "addressprefix": {
            "type": "object",
            "metadata": {
                "description": "Address prefix of vnet and subnets"
            },
            "defaultValue": {
                "vnetcidr": "10.0.0.0/16",
                "subnetcidr": ["10.0.0.0/24", "10.0.1.0/24", "10.0.2.0/24", "10.0.3.0/24", "10.0.4.0/24", "10.0.5.0/24"]
            }
        }
    },
    "functions": [],
    "variables": {
        "vnet-name": "ntier",
        "subnet-names": ["web", "business", "data", "active-directory", "management", "app-gateway"]
    },
    "resources": [
        {
            "name": "[variables('vnet-name')]",
            "type": "Microsoft.Network/virtualNetworks",
            "apiVersion": "2019-11-01",
            "location": "[resourceGroup().location]",
            "tags": {
                "displayName": "ntier"
            },
            "properties": {
                "addressSpace": {
                    "addressPrefixes": [
                        "[parameters('addressprefix').vnetcidr]"
                    ]
                },
                "subnets": [
                    {
                        "name": "[variables('subnet-names')[0]]",
                        "properties": {
                            "addressPrefix": "[parameters('addressprefix').subnetcidr[0]]",
                            "networkSecurityGroup": {
                                "id": "[resourceId('Microsoft.Network/networkSecurityGroups','webnsg')]"
                            }
                        }
                    },
                    {
                        "name": "[variables('subnet-names')[1]]",
                        "properties": {
                            "addressPrefix": "[parameters('addressprefix').subnetcidr[1]]",
                            "networkSecurityGroup": {
                                "id": "[resourceId('Microsoft.Network/networkSecurityGroups', 'businessnsg')]"
                            }
                        }
                    },
                    {
                        "name": "[variables('subnet-names')[2]]",
                        "properties": {
                            "addressPrefix": "[parameters('addressprefix').subnetcidr[2]]",
                            "networkSecurityGroup": {
                                "id": "[resourceId('Microsoft.Network/networkSecurityGroups','datansg')]"
                            }
                        }
                    },
                    {
                        "name": "[variables('subnet-names')[3]]",
                        "properties": {
                            "addressPrefix": "[parameters('addressprefix').subnetcidr[3]]"
                        }
                    },
                    {
                        "name": "[variables('subnet-names')[4]]",
                        "properties": {
                            "addressPrefix": "[parameters('addressprefix').subnetcidr[4]]",
                            "networkSecurityGroup": {
                                "id": "[resourceId('Microsoft.Network/networkSecurityGroups','mgmtnsg')]"
                            }
                        }
                        
                    },
                    {
                        "name": "[variables('subnet-names')[5]]",
                        "properties": {
                            "addressPrefix": "[parameters('addressprefix').subnetcidr[5]]",
                            "networkSecurityGroup": {
                                "id": "[resourceId('Microsoft.Network/networkSecurityGroups','appgatewaynsg')]"
                            }
                        }
                        
                    }
                    
                ]
            },
            "dependsOn": [
                "[resourceId('Microsoft.Network/networkSecurityGroups', 'webnsg')]",
                "[resourceId('Microsoft.Network/networkSecurityGroups', 'appgatewaynsg')]",
                "[resourceId('Microsoft.Network/networkSecurityGroups', 'businessnsg')]",
                "[resourceId('Microsoft.Network/networkSecurityGroups', 'datansg')]",
                "[resourceId('Microsoft.Network/networkSecurityGroups', 'mgmtnsg')]"
            ]
        },
        {
            "name": "webnsg",
            "type": "Microsoft.Network/networkSecurityGroups",
            "apiVersion": "2019-11-01",
            "location": "[resourceGroup().location]",
            "properties": {
                "securityRules": [
                    {
                        "name": "openhttp",
                        "properties": {
                            "description": "description",
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "80",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 100,
                            "direction": "Inbound"
                        }
                    },
                    {
                        "name": "openhttps",
                        "properties": {
                            "description": "description",
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "443",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 105,
                            "direction": "Inbound"
                        }
                    }
                ]
            }
        },
        {
            "name": "businessnsg",
            "type": "Microsoft.Network/networkSecurityGroups",
            "apiVersion": "2019-11-01",
            "location": "[resourceGroup().location]",
            "properties": {
                "securityRules": [
                    {
                        "name": "open8080",
                        "properties": {
                            "description": "description",
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "8080",
                            "sourceAddressPrefix": "10.0.0.0/16",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 100,
                            "direction": "Inbound"
                        }
                    }
                ]
            }
        },
        {
            "name": "datansg",
            "type": "Microsoft.Network/networkSecurityGroups",
            "apiVersion": "2019-11-01",
            "location": "[resourceGroup().location]",
            "properties": {
                "securityRules": [
                    {
                        "name": "sqlserver",
                        "properties": {
                            "description": "description",
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "1433",
                            "sourceAddressPrefix": "10.0.0.0/16",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 100,
                            "direction": "Inbound"
                        }
                    }
                ]
            }
        },
        {
            "name": "appgatewaynsg",
            "type": "Microsoft.Network/networkSecurityGroups",
            "apiVersion": "2019-11-01",
            "location": "[resourceGroup().location]",
            "properties": {
                "securityRules": [
                    {
                        "name": "openhttp",
                        "properties": {
                            "description": "description",
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "80",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 100,
                            "direction": "Inbound"
                        }
                    },
                    {
                        "name": "openhttps",
                        "properties": {
                            "description": "description",
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "443",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 105,
                            "direction": "Inbound"
                        }
                    }
                ]
            }
        },
        {
            "name": "mgmtnsg",
            "type": "Microsoft.Network/networkSecurityGroups",
            "apiVersion": "2019-11-01",
            "location": "[resourceGroup().location]",
            "properties": {
                "securityRules": [
                    {
                        "name": "openrdp",
                        "properties": {
                            "description": "description",
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "3389",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 100,
                            "direction": "Inbound"
                        }
                    }
                ]
            }
        }
    ],
    "outputs": {}
}
